// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DocTest:stem > asciimath 1`] = `
"<div class="stemblock">
<div class="content">
\\$sqrt(4) = 2\\$
</div>
</div>"
`;

exports[`DocTest:stem > latexmath 1`] = `
"<div class="stemblock">
<div class="content">
\\[C = \\alpha + \\beta Y^&#123;\\gamma&#125; + \\epsilon\\]
</div>
</div>"
`;

exports[`DocTest:stem > with-id-and-role 1`] = `
"<div id="sqrt" class="stemblock right">
<div class="content">
\\$sqrt(4) = 2\\$
</div>
</div>"
`;

exports[`DocTest:stem > with-title 1`] = `
"<div class="stemblock">
<div class="title">Equation</div>
<div class="content">
\\$sqrt(4) = 2\\$
</div>
</div>"
`;
